# CPProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CPProject/: CMakeLists.txt  CPProject.cpp  CredentialReader.cpp  EmailSender.cpp  OTPManager.cpp  UserAuth.cpp  WalletManager.cpp
CPProject/include/: CredentialReader.h  EmailSender.h  OTPManager.h  UserAuth.h  WalletManager.h
